# Code

./: .gitignore  README.md  abbreviation.vim  digraphs  example.vim  funcions.vim  script.vim  search.vim  tips  usage  usage.vim  vimrc  weibinOS.md
Algorithm/: O1.c  count_binary_1  count_binary_1.cpp  getMaxSubSum.js  is_prime.py  problems.md  sqrt  sqrt.c  toBinary.sh
Assembly/: x86.md
Bash/: README.md  array.sh  bash.md  bash.sh  bash_aliases  bashrc  brackets.sh  builtin.sh  collection.sh  color  comparison.sh  complete.sh  crontab.md  doubts.sh  errors.md  examples.sh  expansion.sh  find.sh  getopt.sh  getopts.sh  hello_world.sh  io.sh  math.sh  note  one_liner.sh  pipe.sh  script.sh  string.sh  syntax.sh  weird.sh
C/: README.md
Documents/: OS_installation.md  Terminology.md  What every computer science major should know.html  algorithm.md  basic.md  blacklist  char.md  color.md  concepts.md  documentation.md  file.md  font.md  language.md  lib.md  message.md  model.md  performance.md  perl.md  programming.md  regexp  scripts.md  scripts.tex  test.md  time
GIMP/: gimp.md  scheme.md  syntax.scm  text.scm
Geant4/: abnormal.md  installation.md
Go/: channel.go  go.md  hello_world.go  image.go  io.go  pic  pic.go  routines.go  sync.go  syntax.go  todo
Graphviz/: README.md  dot.sh  graph.dot  graph.ps
Hardware/: Xiaomi  electronics.md
Haskell/: function.hs  ghci.hs  hello_world.hs
Html/: README.md  collection.md  trouble_shooting.md
Java/: date_time.java  gui.java  hello_world.java  io.java  java.md  java.sh  math.java  package.java  readme.md  reflection.java  string.java  thread.java
Js/: DOM.js  README.md  ajax.js  browser.js  builtin.js  canvas.js  datetime.js  js.md  map.js  number.js  object.js  set.js  symbol.js  test.html  typescript.md  video.js
Kotlin/: hello_world.kt  io.kt  kotlin.kt  kotlin.sh
Linux/: Arch.md  Boot  Disk  README.md  commands  concepts  config.md  date.md  documentation.md  font.md  kernel.md  keyboard.md  linux-utils  linux.dot  linux.md  network.md  package.md  permission.md  posix  process.md  selinux  sudo.md  systemd.md  terminal.md  tips.md  utf8.md
Lua/: bug.lua  builtin.lua  convert.lua  coroutine.lua  flow_control.lua  function.lua  hello_world.lua  interactive.lua  io.lua  lua.lua  lua.md  lua.sh  math.lua  os.lua  string.lua  syntactic_sugar.lua  table.lua
Make/cmake/: CMakeCache.txt  CMakeLists.txt  Config.h.in  Makefile  README.md  cmakeLists.txt  cmake_install.cmake  note
Mathematica/: .gitignore
MySQL/: hello_world.mysql  introduction.xml  mysql.command
Net/: API.sh
Perl/: REPL.pl  array.pl  builtin.pl  collection.pl  debug.pl  hash.pl  hashes.pl  hello_world.pl  io.pl  loop_control.pl  math.pl  one_line.pl  one_line.sh  perl.md  perl.sh  readme.md  reference.pl  regex.pl  string.pl  sub.pl  subroutine.pl  syntax.pl
Php/: file_io.php  hello_world.php  mysql_fetch.php  php.md  php.sh  router.php  server.php  session.php  stupid_php.php
Python/: README.md  annotation.py  array.py  basic.py  builtin.py  class.py  comparing.py  context_manager.py  controlflow.py  convert.py  date.py  debug.py  decorator.py  dict.py  dictionaries.py  exception.md  exception.py  file.py  function.py  generator.py  hello_world.py  help.py  internet.py  interpreter.py  io.py  iterator.py  lambda.py  libraries.py  list.py  map.py  math.py  modules.md  number.py  python.md  python.sh  range.py  re.py  scope.py  set.py  setup.py  (+11 more)
R/: OOP.R  R.dot  R.md  README.md  analysis.R  array.R  basic.R  control.R  data.csv  data_frame.R  dataset.md  distribution.R  factor.R  function.R  interpreter.R  io.R  list.R  mathematics.R  matrix.R  operator.R  package.R  plot.R  random.R  (+5 more)
(+447 files in other folders)
